# ArthSaarthi

./: .antigravityignore  .gitattributes  .gitignore  1.txt  97231532212202511001703467830197747_extracted.txt  AGENTS.md  AI_WORKFLOW.md  BUILDING.md  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NFR9.2_analytics_caching.md  PR_DESCRIPTION.md  README.md  RELEASE_PLAN.md  SYSTEM.md  arthsaarthi-release.keystore  build-and-push.sh  clean.sh  code_memory.db-shm  code_memory.db-wal  configure.sh  create_issues.sh  demo_prompt.md  developer_guide.md  docker-compose.desktop.debug.yml  docker-compose.desktop.yml  docker-compose.e2e.sqlite.yml  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.sqlite.yml  docker-compose.test.desktop.yml  docker-compose.test.sqlite.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  extract_tax_rules.py  (+54 more)
backend/: .dockerignore  .env  .env.migration  .env.prod  .env.prod.example  .env.test.bak  =5.6.4  Dockerfile  Dockerfile.prod  alembic.ini  backend-requirements.txt  build-backend.spec  check_syntax.py  debug_yahooquery_ticker.py  e2e_entrypoint.sh  entrypoint.sh  evaluate_defeatbeta.py  evaluate_metadata_alts.py  evaluation_results.json  extracted_pdf.txt  lint_report.txt  metadata_evaluation_results.json  out.txt  out2.txt  patch_crud_dashboard_3.py  patch_crud_holding2.py  pms_app.spec  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-windows.txt  requirements.in  requirements.txt  run_cli.py  run_pyinstaller.py  test.json  (+16 more)
(+1018 files in other folders)
